<resources>
    <string name="app_name">Training</string>
    <string name="string_chat">微信</string>
    <string name="string_friends">通讯录</string>
    <string name="string_dynamic">发现</string>
    <string name="string_setting">我</string>
    <string name="string_round">朋友圈</string>
    <string name="string_scan">扫一扫</string>
    <string name="string_shake">摇一摇</string>
    <string name="string_search">搜一搜</string>
    <string name="string_near">附近的人</string>
    <string name="string_float">漂流瓶</string>
    <string name="string_shopping">购物</string>
    <string name="string_game">游戏</string>
    <string name="string_little_app">小程序</string>
</resources>
